// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> with additional className matches its snapshot 1`] = `
<Attach
  ariaHidden={true}
  className="y-icon y-icon__attach TEST_CLASSNAME"
  height="16px"
  style={Object {}}
  width="16px"
/>
`;

exports[`<Icon /> with block matches its snapshot 1`] = `
<Attach
  ariaHidden={true}
  className="y-icon y-icon__attach y-icon__isBlock"
  height="16px"
  style={Object {}}
  width="16px"
/>
`;

exports[`<Icon /> with color matches its snapshot 1`] = `
<Attach
  ariaHidden={true}
  className="y-icon y-icon__attach"
  height="16px"
  style={
    Object {
      "color": "blue",
    }
  }
  width="16px"
/>
`;

exports[`<Icon /> with minimal options matches its snapshot 1`] = `
<Attach
  ariaHidden={true}
  className="y-icon y-icon__attach"
  height="16px"
  style={Object {}}
  width="16px"
/>
`;

exports[`<Icon /> with passed size value matches its snapshot 1`] = `
<Attach
  ariaHidden={true}
  className="y-icon y-icon__attach"
  height="32px"
  style={Object {}}
  width="32px"
/>
`;
